<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.nonUserPages.LoginPage">
    <ImageView
        android:id="@+id/login_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/kedi1">

    </ImageView>

    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_banner"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/brand_text"
        android:textSize="30sp"
        android:textColor="@color/material_dynamic_primary50">


    </TextView>

    <TextView
        android:id="@+id/brand_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_desc"
        android:layout_alignBottom="@id/login_banner"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:textSize="21sp"
        android:textColor="@color/material_dynamic_primary40">

    </TextView>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="35sp"
        android:layout_below="@id/login_banner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@id/login_title"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_below="@id/emailField"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/filledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/go_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filledButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/go_to_signup">

    </TextView>

</RelativeLayout>